fix layout issue

--- a/website/assets/css/pages/_home.sass
+++ b/website/assets/css/pages/_home.sass
@@ -10,13 +10,9 @@
     +container()
     > article
         display: none
+        flex-basis: 100%
         &.active
             display: flex
-        height: 450px
-        border-bottom: 3px solid $black
-        box-sizing: border-box
-        flex-direction: column
-        justify-content: center
         background-repeat: no-repeat
         background-position: center
         background-size: cover
